--- a/driver_pro/app/src/main/res/layout/activity_main.xml
+++ b/driver_pro/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_fragment_bg"
     android:orientation="vertical">
 
     <!--popupTheme表示的是overflow的主体背景-->
@@ -16,5 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"></android.support.v4.view.ViewPager>
+    <include layout="@layout/button_group_view" />
 </LinearLayout>
 
