--- a/driver_pro/app/src/main/res/layout/fragment_more.xml
+++ b/driver_pro/app/src/main/res/layout/fragment_more.xml
@@ -2,23 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_fragment_bg"
-    android:orientation="vertical">
+    android:background="@android:color/transparent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/more_rv"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/more_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp" />
-    </LinearLayout>
-
-    <include layout="@layout/button_group_view" />
 </LinearLayout>
