--- a/duducar_passengar_ios/duducar/PaymentViewController.xib
+++ b/duducar_passengar_ios/duducar/PaymentViewController.xib
@@ -7,8 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PaymentViewController">
             <connections>
-                <outlet property="chargeLabel" destination="KGf-cc-ys2" id="4Wq-QF-Qn4"/>
+                <outlet property="alipayButton" destination="0bX-fk-tem" id="TAN-YK-i9o"/>
+                <outlet property="chargeLabel" destination="KGf-cc-ys2" id="zor-Me-9DB"/>
+                <outlet property="paymentConfirmButton" destination="H46-xH-jOJ" id="j0P-20-FBL"/>
                 <outlet property="view" destination="7fy-Na-zOC" id="rJI-Ds-c02"/>
+                <outlet property="weichatpayButton" destination="fy3-Jr-YhZ" id="zJb-Of-jsE"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -126,7 +129,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BDs-tX-5b4" userLabel="PaymethodAlipay">
                     <rect key="frame" x="8" y="216" width="584" height="40"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UYc-Kh-Sph">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alipay" highlightedImage="alipay" translatesAutoresizingMaskIntoConstraints="NO" id="UYc-Kh-Sph">
                             <rect key="frame" x="8" y="5" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="Aq4-fc-pSz"/>
@@ -139,11 +142,11 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bX-fk-tem">
-                            <rect key="frame" x="546" y="5" width="30" height="30"/>
-                            <state key="normal" title="选择"/>
+                        <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bX-fk-tem">
+                            <rect key="frame" x="528" y="4" width="67" height="31"/>
+                            <state key="normal" title="选择" image="unchecked"/>
                             <connections>
-                                <action selector="aliPaySelected:" destination="-1" eventType="touchUpOutside" id="OIj-Wd-elO"/>
+                                <action selector="aliPaySelected:" destination="-1" eventType="touchUpInside" id="3a8-vp-53N"/>
                             </connections>
                         </button>
                     </subviews>
@@ -162,7 +165,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aMi-1T-HOQ" userLabel="PaymethodWechat">
                     <rect key="frame" x="8" y="256" width="584" height="40"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NF9-dv-MKl">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="weichat" highlightedImage="weichat" translatesAutoresizingMaskIntoConstraints="NO" id="NF9-dv-MKl">
                             <rect key="frame" x="8" y="5" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="EMB-u3-Ngc"/>
@@ -175,9 +178,9 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fy3-Jr-YhZ">
-                            <rect key="frame" x="546" y="5" width="30" height="30"/>
-                            <state key="normal" title="选择"/>
+                        <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fy3-Jr-YhZ">
+                            <rect key="frame" x="528" y="4" width="67" height="31"/>
+                            <state key="normal" title="选择" image="unchecked"/>
                             <connections>
                                 <action selector="WechatPaySelected:" destination="-1" eventType="touchUpInside" id="i3V-u6-P1T"/>
                             </connections>
@@ -196,11 +199,19 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H46-xH-jOJ">
                     <rect key="frame" x="30" y="326" width="540" height="50"/>
+                    <color key="backgroundColor" red="0.066666666666666666" green="0.54509803921568623" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="u4u-JO-3qS"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                    <state key="normal" title="支付宝支付39.9元"/>
+                    <state key="normal" title="支付宝支付39.9元">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="paymentAction:" destination="-1" eventType="touchUpInside" id="UgT-nK-5zm"/>
                     </connections>
@@ -232,4 +243,9 @@
             <point key="canvasLocation" x="-122" y="62"/>
         </view>
     </objects>
+    <resources>
+        <image name="alipay" width="30" height="30"/>
+        <image name="unchecked" width="31" height="31"/>
+        <image name="weichat" width="30" height="30"/>
+    </resources>
 </document>
